# SuffixAutomaton

./: CMakeLists.txt  main.cpp  suffix_automaton.cpp  suffix_automaton.h
CMake_build/: CMakeCache.txt  Makefile  cmake_install.cmake  suffix_automaton  suffix_automaton.cbp
CMake_build/viz/: graph.gv  makegraph.sh
